@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.28 2005/01/10 02:58:59 lukem Exp $
+#	$NetBSD: Makefile,v 1.29 2005/02/16 03:45:41 hubertf Exp $
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
 
 .include <bsd.own.mk>
@@ -10,9 +10,9 @@ PROG=	systat
 CPPFLAGS+=-I${NETBSDSRCDIR}/usr.bin/vmstat -DSUPPORT_UTMP -DSUPPORT_UTMPX \
 	-I${NETBSDSRCDIR}/usr.bin/who
 CWARNFLAGS+=    -Wno-format-y2k
-SRCS=	bufcache.c cmds.c cmdtab.c disks.c dkstats.c fetch.c globalcmds.c \
-	icmp.c iostat.c ip.c keyboard.c main.c mbufs.c netcmds.c netstat.c \
-	pigs.c ps.c swap.c tcp.c vmstat.c utmpentry.c
+SRCS=	bufcache.c cmds.c cmdtab.c disks.c df.c dkstats.c fetch.c \
+	globalcmds.c icmp.c iostat.c ip.c keyboard.c main.c mbufs.c \
+	netcmds.c netstat.c pigs.c ps.c swap.c tcp.c vmstat.c utmpentry.c
 DPADD=	${LIBCURSES} ${LIBM} ${LIBKVM}
 LDADD=	-lutil -lcurses -lm -lkvm
 BINGRP=	kmem
